concord_macros/tests/trybuild/fail/parser/policy/query_append_inline.stderr
error: expected `=`
  --> tests/trybuild/fail/parser/policy/query_append_inline.rs:12:21
   |
12 |         query "tag" += tag,
   |                     ^
